--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4"
