--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-moment": "^1.1.3",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
